--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -1,1 +1,24 @@
+name: Run Sales Forecast Notebook
+
+on:
+  push:
+    branches: [ "main" ]
+
+jobs:
+  run-notebook:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Install Jupyter
+        run: pip install notebook nbconvert
+
+      - name: Execute Notebook
+        run: jupyter nbconvert --to notebook --execute SalesForecastPipeline.ipynb --output executed_notebook.ipynb
 
