--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -3,22 +3,25 @@ name: Run Sales Forecast Notebook
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   run-notebook:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.9"
+          python-version: "3.10"
 
       - name: Install Jupyter
-        run: pip install notebook nbconvert
+        run: pip install nbconvert notebook
 
-      - name: Execute Notebook
-        run: jupyter nbconvert --to notebook --execute SalesForecastPipeline.ipynb --output executed_notebook.ipynb
-
+      - name: Execute notebook
+        run: |
+          jupyter nbconvert --to notebook --execute SalesForecastPipeline.ipynb \
+            --output executed_notebook.ipynb \
+            --ExecutePreprocessor.timeout=600
